# StampZ_II

./: .gitignore  CALIBRATION_RELEASE_NOTES.md  COLOR_CALIBRATION_SOLUTION.md  LINUX_MINT_22_FIX.md  NORMALIZED_EXPORT_README.md  PLOT3D_APPEND_FIX.md  README.md  SPECTRAL_ENHANCEMENTS.md  __init__.py  color_correction_calculator.py  color_variation_generator.py  color_variations_10_percent.csv  color_variations_5_percent.csv  coordinates.db  debug_averaging.py  debug_calibration_gap.py  demo_switching_formats.py  export_all_for_plot3d.py  hook-PIL.py  initialize_env.py  main.py  main.py.backup  migrate_man_mode_data.py  preferences.json  pyproject.toml  requirements-dev.txt  requirements.txt  runtime_hook.py  stampz.spec  stampz_calibration_enhanced.json  test_calibration_sampling.py  test_enhanced_spectral.py  test_normalized_export.py  test_save_average.py  test_spectral_analysis.py  test_spectral_data_20250801_104848.csv  test_window_sizing.py
data/: coordinates.db
examples/: color_calibration_example.py  spectral_analysis_example.py
gui/: __init__.py  calibration_wizard.py  canvas.py  canvas.py.bak  canvas_core.py  collapsible_controls.py  color_comparison_manager.py  color_display.py  color_library_manager.py  controls_reorganized.py  database_viewer.py  plot3d_integration_gui.py  preferences_dialog.py  sample_preview.py  scroll_manager.py  shape_manager.py  template_manager.py  tool_manager.py
plot3d/: Plot_3D.py  __init__.py  axis_controls.py  data_processor.py  delta_e_calculator.py  delta_e_manager.py  group_display_manager.py  highlight_manager.py  (+11 more)
(+57 files in other folders)
