[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "StampZ II"
version = "2.0.3"
description = "An advanced  tool for image processing and color conversion."
authors = [
  { name="Your Name", email="your.email@example.com" }
]

[dependencies]
numpy = "==2.2.4"
Pillow = "==10.4.0"
odfpy = "==1.4.1"
colorspacious = "==1.1.2"

